<resources>
    <string name="app_name">EventCalender</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Event Calender</string>
    <string name="nav_header_subtitle">Weekly Event Calender</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="placeholder_weekday_name_short">SAT\n9/12</string>
    <string name="placeholder_weekday_name">SUNDAY</string>
    <string name="placeholder_weekday_date">09/12</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_proceed_button">Proceed</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_goto_today">Go to today</string>
    <string name="app_desc">Weekly Event Calender</string>
    <string name="placeholder_date_text">2nd Feb,2018</string>
    <string name="placeholder_event_title">Event Title</string>

    <string name="placeholder_event_desc">While now defunct, Sunrise’s app designs remain current and show some of the best design work to have ever been applied to a calendar app on both Android and iOS.</string>
    <string name="label_add_event">Add New Event</string>
    <string name="label_no_event">No Event Found On this Date</string>

    <string name="INVALID_EVENT_TITLE">This field is required</string>
    <string name="INVALID_EVENT_DESC">This field is required</string>
    <string name="prompt_event_desc">Put event\'s description here</string>
    <string name="prompt_update">Update event</string>


    <string name="default_web_client_id" translatable="false">333315929682-cshgrgh6q4s25mga88787mqfh6hdurct.apps.googleusercontent.com</string>
    <string name="gcm_defaultSenderId" translatable="false">333315929682</string>
    <string name="google_api_key" translatable="false">AIzaSyDQcAyUN_wKifKfRA39DpyWiNpNcGfywJU</string>
    <string name="google_app_id" translatable="false">1:333315929682:android:b99cfd009f9a6d0916518b</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyDQcAyUN_wKifKfRA39DpyWiNpNcGfywJU</string>
    <string name="google_storage_bucket" translatable="false">event-calendar-3d51c.appspot.com</string>
    <string name="project_id" translatable="false">event-calendar-3d51c</string>
    <string name="prompt_sign_in">Sign In</string>
    <string name="signin_prompt">Please Sign In First</string>
    <string name="placeholder_user_name">John Doe</string>
    <string name="placeholder_user_email">johndoe@gmail.com</string>
    <string name="label_sync_data_cloud">Sync My Data With Cloud</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_fetch_data_cloud">Fetch Previous Data From Cloud</string>
    <string name="label_sign_in">Sign In</string>


</resources>