<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="eventData"
            type="co.jeeon.exam.eventcalender.models.EventInputData" />

        <import type="co.jeeon.exam.eventcalender.utils.UiUtils.FormErrors" />


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_event_title"
                app:errorContentDescription='@{eventData.errorList.contains(FormErrors.INVALID_EVENT_TITLE) ? (@string/INVALID_EVENT_TITLE):""}'>

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={eventData.eventTitle}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_event_desc"
                app:errorContentDescription='@{eventData.errorList.contains(FormErrors.INVALID_EVENT_DESC) ? (@string/INVALID_EVENT_DESC):""}'>

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:imeOptions="actionDone"
                    android:text="@={eventData.eventDesc}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_event"
                android:backgroundTint="@color/reply_blue_50"
                android:text="@string/label_add_event"
                app:icon="@drawable/ic_edit_calendar"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>